changing the text-align

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main id="main">
 
         <h1 id="title">Jackie Chan</h1>
-        <p id="first" }>The second-highest paid actor in the world</p>
+        <p id="first">The second-highest paid actor in the world</p>
 
         <figure id="img-div">
 
